Fix overflowing drawer.

--- a/static/css/tailwind-style.css
+++ b/static/css/tailwind-style.css
@@ -4441,6 +4441,11 @@ details.collapse summary::-webkit-details-marker {
   width: 2.5rem;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .max-w-full {
   max-width: 100%;
 }
